packages/cli/crates/cli/src/snapshots/agentloop_cli__render_snapshots__thinking_streaming_borderless.snap
---
source: crates/cli/src/render_snapshots.rs
expression: rendered
---
· Thinking…
  line three
  line four
  line five
  line six













◆····  Pondering… (0s · ↑ 0 tokens · esc to interrupt)
╭ prompt ──────────────────────────────────────────────────────────────────────╮
│ Fix a TODO in the codebase                                                   │
│code · anthropic/claude-sonnet-4-5 · anthropic · tab mode · ctrl+p commands   │
╰──────────────────────────────────────────────────────────────────────────────╯
native · code · auto · anthropic/claude-sonnet-4-5 · ↑0 ↓0
