packages/cli/crates/cli/src/snapshots/agentloop_cli__render_snapshots__tool_row_bash_failed_tail.snap
---
source: crates/cli/src/render_snapshots.rs
expression: rendered
---
⏺ Bash(cargo test)
  ⎿ exit 101
     error[E0308]: mismatched types
      --> src/main.rs:4:5
     note: expected `u32`
  ⎿ … +2 lines (ctrl+o to expand)













╭ prompt ──────────────────────────────────────────────────────────────────────╮
│ Fix a TODO in the codebase                                                   │
│code · anthropic/claude-sonnet-4-5 · anthropic · tab mode · ctrl+p commands   │
╰──────────────────────────────────────────────────────────────────────────────╯
native · code · auto · anthropic/claude-sonnet-4-5 · ↑0 ↓0
