packages/cli/crates/cli/src/snapshots/agentloop_cli__render_snapshots__tool_row_edit_diff.snap
---
source: crates/cli/src/render_snapshots.rs
expression: rendered
---

  ✻ AgenticStudio  v0.1.0
     agentic coding in your terminal

  .
  /help · shift+tab modes · @ files · / commands

⏺ Edit(src/app.rs)
  ⎿   1   fn main() {
       2 -     let x = old();
       2 +     let x = new();
       3       run(x);
  ⎿ … +4 lines (ctrl+o to expand)







╭ prompt ──────────────────────────────────────────────────────────────────────╮
│ Type a message, / commands, @ files · @path:[0:12] python slice              │
╰──────────────────────────────────────────────────────────────────────────────╯
native · code · auto · anthropic/claude-sonnet-4-5 · ↑0 ↓0
